--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -5,7 +5,10 @@
 }
 
 main{
-    .titulogeneral{
-        
+    h1{
+        color: red; 
+        align-items: center;
+        margin-top: 20px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
 }
