--- a/scss/base/_mediaquery.scss
+++ b/scss/base/_mediaquery.scss
@@ -1,17 +1,44 @@
-@media screen and (min-width:320px) and (max-width:549px)  {
+@media screen and (max-width: 549px) and (min-width: 320px) {
+  /* Header */
   header{
     flex-direction: column;
   }
+  .navbar{
+    padding: 10px;
+  }
+  /* Footer */
   footer{
     width: 100%;
   }
-  .footer .container .footer-center_caja p {
-    font-size: 13px;
+  .footer .container .footer-center_caja .textofooter, h5 {
+    font-size: 11px;
   }
   .footer .container .footer-center_caja a {
-    color: white;
-    text-decoration: none;
-    font-size: 13px;
+    font-size: 11px;
+  }
+  /* Inicio */
+  /* Acerca de Nosotros */
+  /* Materiales Const. & Seguridad Ind. */
+  /* Contáctenos */
+  .containergeneral .container-form{
+    margin: 10px;
+  }
+  .container-form p {
+    font-size: 1px;
+  }
+  .containergeneral .container-form .info-form a {
+    font-size: 8px;
+  }
+  .containergeneral .container-form form textarea {
+    width: 95%;
+    font-size: 8px;
+  }
+  .containergeneral .container-form form .campo {
+    width: 95%;
+    font-size: 8px;
+  }
+  .containergeneral .container-form .btn-enviar{
+    font-size: 10px;
   }
 
 }
