--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,4 +1,8 @@
-$color-primary: rgb(211, 5, 5);
+$color-primary: #c10707;
+$text-align: center;
+$font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+$margin-top: 20px;
+$font-size: 25px;
 
 
 
