--- a/scss/base/_mediaquery.scss
+++ b/scss/base/_mediaquery.scss
@@ -1,44 +1,38 @@
-@media screen and (max-width: 549px) and (min-width: 320px) {
-  /* Header */
-  header{
-    flex-direction: column;
+@media (min-width: 1280px) {
+  .navbar-toggler {
+    margin-right: 30vw;
   }
-  .navbar{
-    padding: 10px;
-  }
-  /* Footer */
-  footer{
-    width: 100%;
-  }
-  .footer .container .footer-center_caja .textofooter, h5 {
-    font-size: 11px;
-  }
-  .footer .container .footer-center_caja a {
-    font-size: 11px;
-  }
-  /* Inicio */
-  /* Acerca de Nosotros */
-  /* Materiales Const. & Seguridad Ind. */
-  /* Contáctenos */
-  .containergeneral .container-form{
-    margin: 10px;
-  }
-  .container-form p {
-    font-size: 1px;
-  }
-  .containergeneral .container-form .info-form a {
-    font-size: 8px;
-  }
-  .containergeneral .container-form form textarea {
-    width: 95%;
-    font-size: 8px;
-  }
-  .containergeneral .container-form form .campo {
-    width: 95%;
-    font-size: 8px;
-  }
-  .containergeneral .container-form .btn-enviar{
-    font-size: 10px;
+}
+
+  @media screen and (min-width: 700px) and (max-width: 1279px) {
+    .footer-center_caja {
+      font-size: 17px;
+    }
+    .footer-center_caja .textofooter{
+      font-size: 17px;
+    }
   }
 
-}
+
+  @media screen and (min-width: 550px) and (max-width: 699px) {
+    .footer-center_caja {
+      font-size: 14px;
+    }
+    .footer-center_caja .textofooter{
+      font-size: 14px;
+    }
+  }
+
+  @media screen and (min-width: 320px) and (max-width: 549px) {
+    main .seccion-textoppal{
+      height: 530px;
+      background-color: aqua;
+    }  
+    main .seccion-textoppal .contenedorinicio p{
+      font-size: 80px;
+    }
+    
+    .footer-center_caja .textofooter, .titulofooter{
+      font-size: 12px;
+      }
+  }
