--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -4,6 +4,9 @@
     background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(182,6,6,1) 41%, rgba(101,2,2,1) 100%);
     .container{
         .footer-center_caja{
+            h5{
+                font-size: 17px;
+            }
             a{
                 color: white;
                 text-decoration: none;
