--- a/scss/base/_mediaquery.scss
+++ b/scss/base/_mediaquery.scss
@@ -3,36 +3,220 @@
     margin-right: 30vw;
   }
 }
-
-  @media screen and (min-width: 700px) and (max-width: 1279px) {
-    .footer-center_caja {
-      font-size: 17px;
-    }
-    .footer-center_caja .textofooter{
-      font-size: 17px;
-    }
+@media screen and (min-width: 700px) and (max-width: 1279px) {
+  /* Header */ 
+  header{
+    flex-direction: column;
   }
-
-
-  @media screen and (min-width: 550px) and (max-width: 699px) {
-    .footer-center_caja {
-      font-size: 14px;
-    }
-    .footer-center_caja .textofooter{
-      font-size: 14px;
-    }
+  .navbar{
+    padding: 10px;
   }
-
-  @media screen and (min-width: 320px) and (max-width: 549px) {
-    main .seccion-textoppal{
-      height: 530px;
-      background-color: aqua;
-    }  
-    main .seccion-textoppal .contenedorinicio p{
-      font-size: 80px;
-    }
-    
-    .footer-center_caja .textofooter, .titulofooter{
-      font-size: 12px;
-      }
+  .navbar-toggler{
+    margin-right: 10vw;
+  } 
+  /* Footer */   
+  .footer-center_caja {
+    font-size: 16px;
   }
+  .footer-center_caja .titulofooter{
+    font-size: 16px;
+  }
+  .footer-center_caja .textofooter{
+    font-size: 16px;
+  }
+  /* Inicio */
+  .seccion-textoppal{
+    height: 240px;
+  }
+  .contenedorinicio p{
+    font-size: 17px;
+  }
+  .contenedorinicio h3{
+    font-size: 14px;
+    margin: 15px;
+  }
+  /* Acerca de Nosotros */ 
+  .textoacerca{
+    font-size: 15px;
+    text-align: justify;
+  }
+  /* Pág. Materiales & Seguridad */
+  .contenedorprincipal{
+    display: grid;
+    place-content: center;
+  } 
+  .contenedorfotos{
+    flex-direction: column;
+  }
+  .imagenmatcons{
+    font-size: 13px;
+  }
+  .imagensegind{
+    font-size: 13px;
+  }
+  /* Contáctenos */ 
+  .containergeneral {
+    padding-top: none;
+  }
+  .container-form {
+    margin: 20px;
+  }
+  .container-form p {
+    font-size: 17px;
+  }
+  .container-form a {
+    font-size: 15px;
+  }
+  .container-form form .campo, textarea {
+    width: 100%;
+    font-size: 15px;
+  }
+  .container-form .btn-enviar {
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 550px) and (max-width: 699px) {
+  /* Header */ 
+  header{
+    flex-direction: column;
+  }
+  .navbar{
+    padding: 10px;
+  }
+  .navbar-toggler{
+    margin-right: 10vw;
+  } 
+  /* Footer */  
+  .footer-center_caja {
+    font-size: 14px;
+  }
+  .footer-center_caja .titulofooter{
+    font-size: 14px;
+  }
+  .footer-center_caja .textofooter{
+    font-size: 14px;
+  }
+/* Inicio */
+  .seccion-textoppal{
+    height: 240px;
+  }
+  .contenedorinicio p{
+    font-size: 15px;
+  }
+  .contenedorinicio h3{
+    font-size: 14px;
+    margin: 15px;
+  }
+  /* Acerca de Nosotros */ 
+  .textoacerca{
+    font-size: 14px;
+    text-align: justify;
+  }
+  /* Pág. Materiales & Seguridad */
+  .contenedorprincipal{
+    display: grid;
+    place-content: center;
+  } 
+  .contenedorfotos{
+    flex-direction: column;
+  }
+  .imagenmatcons{
+    font-size: 13px;
+  }
+  .imagensegind{
+    font-size: 13px;
+  }
+  /* Contáctenos */ 
+  .containergeneral {
+    padding-top: none;
+  }
+  .container-form {
+    margin: 20px;
+  }
+  .container-form p {
+    font-size: 15px;
+  }
+  .container-form a {
+    font-size: 15px;
+  }
+  .container-form form .campo, textarea {
+    width: 100%;
+    font-size: 15px;
+  }
+  .container-form .btn-enviar {
+    font-size: 14px;
+  }  
+}
+
+@media screen and (min-width: 320px) and (max-width: 549px) {
+  /* Header */ 
+  header{
+    flex-direction: column;
+  }
+  .navbar{
+    padding: 10px;
+  }
+  .navbar-toggler{
+    margin-right: 10vw;
+  } 
+  /* Footer */  
+  .footer-center_caja {
+    font-size: 12px;
+  }
+  .footer-center_caja .titulofooter{
+    font-size: 12px;
+  }
+  .footer-center_caja .textofooter{
+    font-size: 12px;
+  }
+/* Inicio */
+  .seccion-textoppal{
+    height: 240px;
+  }
+  .contenedorinicio p{
+    font-size: 13px;
+  }
+  .contenedorinicio h3{
+    font-size: 13px;
+    margin: 15px;
+  }
+  /* Acerca de Nosotros */ 
+  .textoacerca{
+    font-size: 13px;
+    text-align: justify;
+  }
+  /* Pág. Materiales & Seguridad */
+  .contenedorprincipal{
+    display: grid;
+    place-content: center;
+  } 
+  .contenedorfotos{
+    flex-direction: column;
+  }
+  .imagenmatcons{
+    font-size: 11px;
+  }
+  .imagensegind{
+    font-size: 11px;
+  }
+  /* Contáctenos */ 
+  .containergeneral {
+    padding-top: none;
+  }
+  .container-form {
+    margin: 20px;
+  }
+  .container-form p {
+    font-size: 12px;
+  }
+  .container-form a {
+    font-size: 12px;
+  }
+  .container-form form .campo, textarea {
+    width: 100%;
+    font-size: 12px;
+  }
+  .container-form .btn-enviar {
+    font-size: 12px;
+  }      
+}
