--- a/scss/base/_extend.scss
+++ b/scss/base/_extend.scss
@@ -5,3 +5,10 @@
     color: #272727;
     font-size: 18px;
 }
+
+%textopag{
+    font-size: 18px;
+    margin: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
