--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -2,32 +2,34 @@
 header{
     background: url(../Imagenes/Fondo-Nav-Bar.jpg)no-repeat;
     background-size: cover;
-    .navbar{
-        .container-fluid{
-            .logo img{
-                height: 150px;
-                width: 160px;
-                padding: 5px;
-            }
-            .navbar-toggler{
-                background-color: #be7676f5;
-                border: var(--bs-border-width) solid rgba(238, 131, 131, 0.327);
-                margin-right: 20px;
-            }
-            .navbar-nav{
-                padding-left: 20px;
-                .nav-link{
-                    color: white;
-                    text-decoration: solid;
-                    font-size: 17px;
-                    white-space: pre-wrap !important; /* Evita el salto de línea */
-                    overflow: hidden; /* Oculta el texto excedente */
-                    text-overflow: ellipsis; /* Muestra puntos suspensivos (...) */
-                    &:hover{
-                        color: rgb(52, 52, 52);
-                    }
-                }
-            }
-        }
+    width: 100%;
+}
+
+.logo img{
+    height: 150px;
+    width: 160px;
+    padding: 5px;
+}
+
+.nav-link {
+    color: white;
+    text-decoration: solid;
+    font-size: 17px;
+    white-space: pre-wrap !important; /* Evita el salto de línea */
+    overflow: hidden; /* Oculta el texto excedente */
+    text-overflow: ellipsis; /* Muestra puntos suspensivos (...) */
+    &:hover{
+        color: rgb(52, 52, 52);
     }
 }
+
+.navbar-toggler{
+    background-color: #be7676f5;
+    border: var(--bs-border-width) solid rgba(238, 131, 131, 0.327);
+    margin-right: 20px;
+}
+
+.navbar-nav{
+    padding-left: 20px;
+}
+
